--- a/ChordPlayer/app/src/main/res/values/strings.xml
+++ b/ChordPlayer/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="second_fragment_label">Second Fragment</string>
     <string name="button_add">Add</string>
     <string name="button_play">Play</string>
+    <string name="button_remove">Remove</string>
     <string name="previous">Previous</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
