Implement invisible fragment fixes

--- a/ChordPlayer/app/src/main/res/values/strings.xml
+++ b/ChordPlayer/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="previous">Previous</string>
     <string name="toggleButton_flat">♭</string>
     <string name="button_change_chord">Edit</string>
+    <string name="setBPM_autofillHint">0</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
