Add more chord types
Shouldn't need any more than this. The problem is inversions, but see TODO for more about that.

--- a/ChordPlayer/app/src/main/res/values/strings.xml
+++ b/ChordPlayer/app/src/main/res/values/strings.xml
@@ -28,5 +28,11 @@
     <string-array name="colour_spinner">
         <item>Major</item>
         <item>Minor</item>
+        <item>Major 7</item>
+        <item>Minor 7</item>
+        <item>Dominant 7</item>
+        <item>Diminished 7</item>
+        <item>Half dim 7</item>
+        <item>Augmented 7</item>
     </string-array>
 </resources>
