--- a/ChordPlayer/app/src/main/res/values/strings.xml
+++ b/ChordPlayer/app/src/main/res/values/strings.xml
@@ -14,4 +14,15 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
 
+    <string-array name="chord_lengths">
+        <item>"1"</item>
+        <item>"2"</item>
+        <item>"3"</item>
+        <item>"4"</item>
+        <item>"5"</item>
+        <item>"6"</item>
+        <item>"7"</item>
+        <item>"8"</item>
+    </string-array>
+
 </resources>
