--- a/ChordPlayer/app/src/main/res/values/strings.xml
+++ b/ChordPlayer/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="bpm_text">BPM</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="element_text">HEJ</string>
 
     <string-array name="chord_lengths">
         <item>"1"</item>
