Add graphical representation of metronome toggler

--- a/ChordPlayer/app/src/main/res/values/strings.xml
+++ b/ChordPlayer/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="button_change_chord">Edit</string>
     <string name="setBPM_autofillHint">0</string>
     <string name="bpm_text">BPM</string>
+    <string name="metronome_text">Metronome</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="element_text">HEJ</string>
