--- a/ChordPlayer/app/src/main/res/values/strings.xml
+++ b/ChordPlayer/app/src/main/res/values/strings.xml
@@ -1,7 +1,14 @@
 <resources>
     <string name="app_name">Chord Player</string>
     <string name="action_settings">Settings</string>
+    <string name="action_save">Save progression</string>
+    <string name="action_load">Load progression</string>
     <!-- Strings used for fragments for navigation -->
+
+    <string name="input_save_title">Save progressione</string>
+    <string name="input_save_hint"> </string>
+    <string name="input_save_desc">Note: overwrites existing progressions with same name. </string>
+
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
     <string name="button_add">Add</string>
